2012-08-12  6.7.8-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-10, SVN revision 8915.

2012-08-10  6.7.8-9 Cristy  <quetzlzacatenango@image...>
  * Respect the image mask for option -selective-blur (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21631).
  * Fix multiple issues with BMPv5 colorimetry (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21640).

2012-08-10  6.7.8-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-9, SVN revision 8902.

2012-08-07  6.7.8-9 Cristy  <quetzlzacatenango@image...>
  * Selective blur stopped working after version 6.7.4-10 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21604).
  * Color reduction now handles transparent pixel properly (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18463).
  * ClipImagePath() now returns a valid SVG XML for Windows x64 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21617).

2012-08-05  6.7.8-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-8, SVN revision 8845.

2012-08-03  6.7.8-8 Anthony Thyssen <A.Thyssen@griffith...>
  * Added 2d named convolution kernel Binomial (for Fred Wienhaus)

2012-08-01  6.7.8-8 Nicolas Robidoux <nicolas.robidoux@gmail...>
  * Clean up sigmoidal-contrast.

2012-07-31  6.7.8-8 Cristy  <quetzlzacatenango@image...>
  * Use ConcatenateString() for multi-block GIF comments.
  * Caption no longer chops off text (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21558).
  * Support LUV colorspace.
  * Support HCL colorspace.
  * Don't transform the composite image colorspace, set it instead.
  * Interpret -border 5% as 5% of width and 5% of height (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21537).
  * Don't normalize zero-sum kernels (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21584).