@@ -702,7 +702,7 @@ static void HCLComposite(const double hue,const double chroma,const double luma,
                 r=c;      
                 b=x;      
               }
-  m=luma-0.298839*r+0.586811*g+0.114350*b;
+  m=luma-(0.298839*r+0.586811*g+0.114350*b);
   *red=ClampToQuantum(QuantumRange*(r+m));
   *green=ClampToQuantum(QuantumRange*(g+m));
   *blue=ClampToQuantum(QuantumRange*(b+m));
@@ -735,7 +735,7 @@ static void CompositeHCL(const MagickRealType red,const MagickRealType green,
     h=0.0;
   else
     if (red == (Quantum) max)
-      h=fmod((g-b)/c,6.0);
+      h=fmod(6.0+(g-b)/c,6.0);
     else
       if (green == (Quantum) max)
         h=((b-r)/c)+2.0;
